# cortex

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cortex/: __init__.py  constants.py  custom_typing.py  tensor.py  visualizer.py
cortex/nn/: __init__.py  activations.py  functionals.py  layers.py  loss_functions.py  primatives.py
cortex/operations/: __init__.py  operation.py  tensor_operations.py
cortex/optim/: __init__.py  optimizers.py  primatives.py
tests/: conftest.py  test_tensor.py  test_tensor_operations.py
tests/nn/: __init__.py  test_activations.py  test_functionals.py  test_layers.py  test_loss_functions.py  test_primatives.py  test_simple_nn_numeric.py
tests/optim/: test_optimizers.py  test_primatives.py
